--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Invoice for merchants",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --reporter dot",
+    "test": "jest",
     "start": "node server"
   },
   "repository": {
@@ -23,22 +23,29 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "expect.js": "^0.3.1",
-    "express": "^4.13.4",
-    "lodash": "^4.2.1",
-    "mocha": "^3.5.0",
-    "prop-types": "^15.5.10",
     "axios": "^0.16.2",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "enzyme": "^2.9.1",
+    "expect.js": "^0.3.1",
+    "express": "^4.13.4",
+    "jest": "^20.0.4",
+    "lodash": "^4.2.1",
+    "mocha": "^3.5.0",
     "mysql": "^2.14.1",
+    "prop-types": "^15.5.10",
+    "react-addons-test-utils": "^15.6.0",
     "react-bootstrap": "^0.31.2",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.2.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   }
